@@ -1,3 +1,7 @@
+2006-12-23    <jeff@mini.nerble.net>
+
+	* mapedit/shapeedit.cc: Added "Browse" buttons for usecode selection.
+
 2006-12-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Increased version to 1.4.03CVS due to the enormous number of changes.
 	* Added versioning information to the files loaded through Shapeinfo_lookup.
